chore (refs T30974): Change name of color-highlight variables.

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_data-table.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_data-table.scss
@@ -52,7 +52,7 @@
 
         i,
         span {
-            color: $dp-color-highlight;
+            color: $dp-color-brand-highlight-base;
             display: inline;
             font-size: 1em;
         }
