--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_tiptap.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_tiptap.scss
@@ -57,7 +57,7 @@
         color: $dp-color-brand-main-base !important;
 
         &:hover {
-            color: $dp-color-highlight !important;
+            color: $dp-color-brand-highlight-base !important;
             cursor: pointer;
         }
     }
