feat(refs T31492): Remove unused routes
These routes are not necessary anymore, because we moved the files from ui to core and they were only introduced, because we don't want any routing in ui.

--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_unregistered_publicagency_email.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_unregistered_publicagency_email.html.twig
@@ -101,10 +101,7 @@
                             hiddenInput: 'r_emailText',
                             linkButton: true,
                             procedureId: procedureId,
-                            ref: 'r_emailText',
-                            routes: {
-                                boilerplateEditViewRoute: path('DemosPlan_procedure_boilerplate_list', { 'procedure': procedureId })
-                            }
+                            ref: 'r_emailText'
                         },
                         type: 'editor',
                         id: 'r_emailText',
