--- a/templates/bundles/DemosPlanUserBundle/DemosPlanUser/customer_settings_update_mail.html.twig
+++ b/templates/bundles/DemosPlanUserBundle/DemosPlanUser/customer_settings_update_mail.html.twig
@@ -42,10 +42,7 @@
                             headings: [1,2,3],
                             hiddenInput: 'r_email_body',
                             linkButton: true,
-                            required: true,
-                            routes: {
-                                boilerplateEditViewRoute: path('DemosPlan_procedure_boilerplate_list', { 'procedure': procedureId|default })
-                            }
+                            required: true
                         },
                         id: 'r_email_body',
                         type: 'editor',
