--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_send_email.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_send_email.html.twig
@@ -47,10 +47,7 @@
                         toolbarItems: { headings: [1,2,3] },
                         hiddenInput: 'r_email_body',
                         linkButton: true,
-                        procedureId: templateVars.procedureId,
-                        routes: {
-                            boilerplateEditViewRoute: path('DemosPlan_procedure_boilerplate_list', { 'procedure': templateVars.procedureId })
-                        }
+                        procedureId: templateVars.procedureId
                     },
                     id: 'r_email_body',
                     type: 'editor',
