--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_split_statement.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_split_statement.html.twig
@@ -7,6 +7,19 @@
         {% set submitTypeOptions = submitTypeOptions|merge([{ label: label, value: value }]) %}
     {% endfor %}
 
+    {% set addonProps = {
+        'procedureId': procedure,
+        'statementId': statementId,
+        'statementExternId': statementExternId,
+        'procedureId': procedure,
+        'procedureName': procedureName,
+        'title': title
+        }
+    %}
+    <addon-wrapper
+        hook-name="split.statements"
+        :addon-props="JSON.parse('{{ addonProps|json_encode|e('js', 'utf-8') }}')">
+    </addon-wrapper>
 {% endblock %}
 
 {% block javascripts %}
