--- a/templates/bundles/DemosPlanAssessmentTableBundle/DemosPlan/shared/v1/assessment_statement_detail_statement_text.html.twig
+++ b/templates/bundles/DemosPlanAssessmentTableBundle/DemosPlan/shared/v1/assessment_statement_detail_statement_text.html.twig
@@ -104,12 +104,28 @@
                                 editor-id="recommendationText"
                                 :entity-id="JSON.parse('{{ statement.id|json_encode|e('js') }}')"
                                 hidden-input="r_recommendation"
-                                procedure-id="{{ templateVars.table.procedure.ident }}"
                                 :toolbar-items="{
-                                    boilerPlate: 'consideration',
                                     linkButton: true
                                 }"
                                 v-model="currentRecommendation">
+                                <template v-slot:modal="modalProps">
+                                    <dp-boiler-plate-modal
+                                        ref="boilerPlateModal"
+                                        boiler-plate-type="consideration"
+                                        editor-id="recommendationText"
+                                        procedure-id="{{ templateVars.table.procedure.ident }}"
+                                        @insert="text => modalProps.handleInsertText(text)">
+                                    </dp-boiler-plate-modal>
+                                </template>
+                                <template v-slot:button>
+                                    <button
+                                        class="{{ 'menubar__button'|prefixClass }}"
+                                        type="button"
+                                        v-tooltip="'{{ 'boilerplate.insert'|trans }})'"
+                                        @click.stop="$refs.boilerPlateModal.toggleModal()">
+                                        <i class="{{ 'fa fa-puzzle-piece'|prefixClass }}"></i>
+                                    </button>
+                                </template>
                             </dp-editor>
                         {% else %}
                             <span class="overflow-word-break">
