--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_toc.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_toc.scss
@@ -14,7 +14,7 @@
 //  used to render an expandable menu tree structure
 
 //  variables
-$toc-toggle-icon-color: $dp-token-color-brand-link-alt !default;
+$toc-toggle-icon-color: $dp-color-neutral-base !default;
 $toc-toggle-icon-color-hover: $dp-token-color-brand-link-hover !default;
 
 .c-toc {
