--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_map.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_map.scss
@@ -776,8 +776,8 @@ $map-layer-color-active-hover: $dp-token-color-brand-cta-dark;
         &__measure-output {
             padding: 3px 6px;
 
-            background-color: $dp-token-color-brand-alt;
-            color: $dp-token-color-brand-alt-contrast;
+            background-color: $dp-color-brand-alt-base;
+            color: $dp-color-brand-alt-contrast;
 
             white-space: nowrap;
         }
