--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/utility/_color.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/utility/_color.scss
@@ -24,11 +24,11 @@
         }
 
         &-alt {
-            color: $dp-token-color-brand-alt;
+            color: $dp-color-brand-alt-base;
         }
 
         &-alt-contrast {
-            color: $dp-token-color-brand-alt-contrast;
+            color: $dp-color-brand-alt-contrast;
         }
 
         &-highlight {
@@ -154,11 +154,11 @@
         }
 
         &-alt {
-            background-color: $dp-token-color-brand-alt;
+            background-color: $dp-color-brand-alt-base;
         }
 
         &-alt-contrast {
-            background-color: $dp-token-color-brand-alt-contrast;
+            background-color: $dp-color-brand-alt-contrast;
         }
 
         &-highlight {
