--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/includes/procedure_newslist.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/includes/procedure_newslist.html.twig
@@ -1,3 +1,5 @@
+{% block newslist %}
+
 {% for news in templateVars.newsList %}
 
     {# title #}
@@ -57,3 +59,5 @@
     </div>
 
 {% endfor %}
+
+{% endblock newslist %}
