--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_chart.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_chart.scss
@@ -186,5 +186,5 @@
     &__color-3-2 { color: $dp-color-data-3-2; }
     &__color-3-3 { color: $dp-color-data-3-3; }
 
-    &__color-active { color: $dp-chart-color-active; }
+    &__color-active { color: $dp-color-brand-highlight-base; }
 }
