fix(refs:T30974): swap $alternate-font-color
The value for $alternate-font-color was white. It was never
reassigned another value. Thats why a new token is crafted
which expresses this a bit more clearly: $dp-color-text-on-dark.

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_flyout.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_flyout.scss
@@ -115,7 +115,7 @@
         display: none;
 
         background-color: $dp-color-neutral-dark-2;
-        color: $alternate-font-color;
+        color: $dp-color-text-on-dark;
 
         // Show tooltip content on :hover of parent element, set z-index to trump other tooltips.
         // The flyout is activated on :hover and via data-touch-flyout javascript hook.
