--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_tooltip.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_tooltip.scss
@@ -28,7 +28,7 @@ $tooltip-width: 400px;
     padding: $inuit-base-spacing-unit--tiny $inuit-base-spacing-unit--small $inuit-base-spacing-unit--tiny * 1.5;
 
     background-color: $default-font-color;
-    color: $alternate-font-color;
+    color: $dp-color-text-on-dark;
 
     font-family: $normal-font-family;
     font-weight: $normal-font-weight;
