fix(refs:T30974): replace removed color vars
Brand shades are not used anymore, as we
are trying to reduce brand coloring within the ui.

$dp-color-brand-main-dark-1 is substituted (depending on context)
with $dp-color-text-default or the new $dp-color-selection-text.

$dp-color-brand-main-light-2 is substituted with the
new $dp-color-interaction-hover-subtle.

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_splitstatement.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_splitstatement.scss
@@ -267,7 +267,7 @@
         $multiselect-checkbox-border-color: #cacece;
         $multiselect-checkbox-bg-color: #fafafa;
 
-        $multiselect-color-selected: $dp-color-brand-main-dark-1;
+        $multiselect-color-selected: $dp-color-selection-text;
         $multiselect-color-hover: $dp-color-brand-main-base;
 
         // Checkbox styles for options
