fix(refs T31858): hide buttonRow in ewm
There is no practical way of hiding the buttonRow
based on permissions - the appearance of form elements
is already controlled by twig project overrides. So,
to hide the buttonRow for ewm, it is moved within the
inner template. Here, it can then be hidden via block, too.

--- a/templates/bundles/DemosPlanUserBundle/DemosPlanUser/orga_data_entry.html.twig
+++ b/templates/bundles/DemosPlanUserBundle/DemosPlanUser/orga_data_entry.html.twig
@@ -351,3 +351,11 @@
         {% endblock %}
     </fieldset>
 {% endif %}
+
+
+{% block buttonRow %}
+    {{ uiComponent('button-row', {
+        primary: uiComponent('button', { type: 'submit' }),
+        secondary: uiComponent('button', { color: 'secondary', type: 'reset' })
+    }) }}
+{% endblock buttonRow %}
