--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_splitstatement.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_splitstatement.scss
@@ -268,7 +268,7 @@
         $multiselect-checkbox-bg-color: #fafafa;
 
         $multiselect-color-selected: $dp-color-selection-text;
-        $multiselect-color-hover: $dp-color-brand-main-base;
+        $multiselect-color-hover: $dp-color-brand-main;
 
         // Checkbox styles for options
         input[type='checkbox'] {
