--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_survey-chart.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_survey-chart.scss
@@ -18,7 +18,7 @@
             background-color: $dp-token-color-ui-info;
 
             .survey-chart--branded & {
-                background-color: $dp-color-brand-main-base;
+                background-color: $dp-color-brand-main;
             }
         }
 
