--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_tiptap.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_tiptap.scss
@@ -54,7 +54,7 @@
     }
 
     a {
-        color: $dp-color-brand-main-base !important;
+        color: $dp-color-brand-main !important;
 
         &:hover {
             color: $dp-color-brand-highlight-base !important;
