--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/utility/_color.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/utility/_color.scss
@@ -16,7 +16,7 @@
     // Brand tokens
     &-brand {
         &-main {
-            color: $dp-color-brand-main-base;
+            color: $dp-color-brand-main;
         }
 
         &-main-contrast {
@@ -150,7 +150,7 @@
     // Brand tokens
     &-brand {
         &-main {
-            background-color: $dp-color-brand-main-base;
+            background-color: $dp-color-brand-main;
         }
 
         &-main-contrast {
