--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_loading.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_loading.scss
@@ -36,7 +36,7 @@
 ///         :overlay="true"/>
 
 .c-loading {
-    $loading-color: $dp-color-brand-main-base !default;
+    $loading-color: $dp-color-brand-main !default;
     $loading-color-bg: $dp-color-white !default;
     $loading-size: $inuit-base-spacing-unit * .75 !default;
     $loading-stroke: 2px !default;
