--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_wizard.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_wizard.scss
@@ -34,7 +34,7 @@
     }
 
     legend:not(.is-label) {
-        color: $dp-color-brand-main-base;
+        color: $dp-color-brand-main;
         cursor: pointer;
 
         i.caret {
@@ -110,7 +110,7 @@
                 position: absolute;
                 top: 22px;
                 left: 22px;
-                color: $dp-color-brand-main-base;
+                color: $dp-color-brand-main;
             }
 
             .o-wizard__main {
@@ -209,11 +209,11 @@
 
                     &.active,
                     &.active i {
-                        color: $dp-color-brand-main-base;
+                        color: $dp-color-brand-main;
                     }
 
                     &.active i {
-                        background-color: $dp-color-brand-main-base;
+                        background-color: $dp-color-brand-main;
                     }
 
                     &.finished i {
