fix(refs:T30974): remove "base"  suffix
this is strictly unneeded and was only added
to be able to better structure the tokens json.
however it is misleading as it implies several
other brand colors.

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_map.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_map.scss
@@ -776,7 +776,7 @@ $map-layer-color-active-hover: $dp-token-color-brand-cta-dark;
         &__measure-output {
             padding: 3px 6px;
 
-            background-color: $dp-color-brand-alt-base;
+            background-color: $dp-color-brand-alt;
             color: $dp-color-brand-alt-contrast;
 
             white-space: nowrap;
