--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_procedurelist.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_procedurelist.scss
@@ -30,7 +30,7 @@
             }
 
             &:hover {
-                background-color: $dp-color-brand-alt-base;
+                background-color: $dp-color-brand-alt;
                 transition: background-color #{$transition-speed-style-delay};
             }
 
