--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_tabs.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_tabs.scss
@@ -31,7 +31,7 @@
 // Contains tab-nav. Tab content is a sibling of .c-tabs.
 .c-tabs {
 
-    background-color: $dp-color-brand-alt-base;
+    background-color: $dp-color-brand-alt;
 
     &__title {
         display: inline-block;
