--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_link.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_link.scss
@@ -46,7 +46,7 @@
         }
     }
 
-    // Assuming links on $dp-color-brand-alt-base
+    // Assuming links on $dp-color-brand-alt
     &--on-alt {
         color: $dp-color-brand-alt-contrast;
         text-decoration: underline;
