--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/token/_color.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/token/_color.scss
@@ -43,7 +43,7 @@ $dp-token-color-brand-cta-contrast:             $dp-color-white !default;
 $dp-token-color-brand-header:                   $dp-color-brand-main !default;
 $dp-token-color-brand-header-contrast:          $dp-color-white !default;
 // - Highlighted state for main nav items, matches pageheader colors
-$dp-token-color-brand-header-alt:               $dp-color-brand-alt-base !default;
+$dp-token-color-brand-header-alt:               $dp-color-brand-alt !default;
 $dp-token-color-brand-header-alt-contrast:      $dp-color-white !default;
 // - Hover state for main nav items, matches :active state for mobile item
 $dp-token-color-brand-header-active:            $dp-color-neutral-light-3 !default;
