--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/utility/_color.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/utility/_color.scss
@@ -24,7 +24,7 @@
         }
 
         &-alt {
-            color: $dp-color-brand-alt-base;
+            color: $dp-color-brand-alt;
         }
 
         &-alt-contrast {
@@ -158,7 +158,7 @@
         }
 
         &-alt {
-            background-color: $dp-color-brand-alt-base;
+            background-color: $dp-color-brand-alt;
         }
 
         &-alt-contrast {
