fix(refs:T30974): remove "base"  suffix
this is strictly unneeded and was only added
to be able to better structure the tokens json.
however it is misleading as it implies several
other brand colors.

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_tabs.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_tabs.scss
@@ -24,8 +24,8 @@
 }
 
 %tabs-btn-color-active {
-    background-color: $dp-color-white;
-    color: $dp-color-brand-highlight-base;
+    background-color: $dp-color-brand-highlight-contrast;
+    color: $dp-color-brand-highlight;
 }
 
 // Contains tab-nav. Tab content is a sibling of .c-tabs.
