--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_statement.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_statement.scss
@@ -52,7 +52,7 @@
                 margin-top: $inuit-base-spacing-unit--small;
                 padding: $inuit-base-spacing-unit;
 
-                border-bottom: 1px solid $default-border-color;
+                border-bottom: 1px solid $dp-color-border-default;
 
                 &:nth-of-type(2n) {
                     border-bottom: none;
@@ -108,7 +108,7 @@
                 }
 
                 &[data-toggle-id].is-visible {
-                    background-color: color.adjust($default-border-color, $lightness: 12%);
+                    background-color: color.adjust($dp-color-border-default, $lightness: 12%);
                 }
 
                 &[data-toggle-target] {
