--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/_base.dplan.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/_base.dplan.scss
@@ -177,7 +177,7 @@ th {
 hr {
     border: none;
     height: 0;
-    border-top: 2px solid $table-row-alternate-bg-color;
+    border-top: 2px solid $dp-color-border-default;
     margin: $inuit-base-spacing-unit--small auto;
 }
 
