--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_image.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_image.scss
@@ -12,7 +12,7 @@
     margin: 8px $inuit-base-spacing-unit 0 0;
     padding: 10px;
     background: $dp-token-color-ui-bg-neutral-medium;
-    border: 2px solid $default-border-color;
+    border: 2px solid $dp-color-border-default;
     border-radius: 3px;
 
     &--thumb {
