--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_segmentlist.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_segmentlist.scss
@@ -7,7 +7,7 @@
 //  All rights reserved
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-$utility-border-color: $default-border-color;
+$utility-border-color: $dp-color-border-default;
 $utility-border-thickness: $dp-border-thickness;
 
 .segment-list {
