--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_styled-html.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_styled-html.scss
@@ -50,28 +50,28 @@
         border-collapse: separate;
 
         tbody {
-            background: $table-row-bg-color;
+            background: $dp-color-neutral-light-3;
         }
 
         tr {
             &:nth-child(2n) {
-                background: $table-row-alternate-bg-color;
+                background: $dp-color-border-default;
             }
 
             &:first-child td {
-                border-top: $dp-border-thickness solid $table-row-alternate-bg-color;
+                border-top: $dp-color-border-default;
             }
 
             &:last-child td {
-                border-bottom: $dp-border-thickness solid $table-row-alternate-bg-color;
+                border-bottom: $dp-border-thickness solid $dp-color-border-default;
             }
 
             td:first-child {
-                border-left: $dp-border-thickness solid $table-row-alternate-bg-color;
+                border-left: $dp-border-thickness solid $dp-color-border-default;
             }
 
             td:last-child {
-                border-right: $dp-border-thickness solid $table-row-alternate-bg-color;
+                border-right: $dp-border-thickness solid $dp-color-border-default;
             }
         }
     }
