--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_objects-cardboxes.dplan.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_objects-cardboxes.dplan.scss
@@ -33,7 +33,7 @@
     margin-bottom: $inuit-base-spacing-unit;
     padding: $inuit-base-spacing-unit--small;
 
-    border: 1px solid $default-border-color;
+    border: 1px solid $dp-color-border-default;
     border-radius: $dp-box-radius;
 }
 
